Article cards created; saved article page created

--- a/public/savedarticles.html
+++ b/public/savedarticles.html
@@ -58,7 +58,7 @@
           <!--article container-->
           <div class="container-fluid article container">
             <div class="alert alert-warning text-center">
-              <h4>Uh oh. Looks like we don't have any new articles.</h4>
+              <h4>Uh oh. Looks like you don't have any saved articles.</h4>
             </div>
 
             <div class="card">
@@ -67,23 +67,11 @@
               </div>
               <div class="card-body text-center">
                 <h4>
-                  <a class="scrape-new">Try scraping for new articles.</a>
-                </h4>
-                <h4>
-                  <a href="/savedarticles.html">Go to saved articles</a>
+                  <a href="index.html" class="scrape-new">Try scraping for new articles.</a>
                 </h4>
               </div>
             </div>
 
-            <!--Article cards-->
-            <div class="card">
-              <div class="card-header">
-                <h3>
-                  <a class="article-link" target="_blank" rel="noopener noreferrer" href=""></a>
-                  <a class="btn btn-success save">Save Article</a>
-                </h3>
-              </div>
-            </div>
           </div>
 
           <!--body for saved articles-->
