--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
         <body>
           <!--Navbar-->
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
-            <a class="navbar-brand" href="#">Mongo Scraper</a>
+            <a class="navbar-brand" href="index.html">Mongo Scraper</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Saved Articles</a>
+                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="/savedarticles.html">Saved Articles</a>
                   <a class="btn btn-danger navbar-btn" id="scrape-button">Scrape New Articles!</a>
                   <button class="btn btn-danger navbar-btn" id="clear-btn">Clear Articles!</button>
               </div>
@@ -55,42 +55,8 @@
             </div>
           </div>
 
-          <!--article container-->
-          <div class="container-fluid article container">
-            <div class="alert alert-warning text-center">
-              <h4>Uh oh. Looks like we don't have any new articles.</h4>
-            </div>
+          <div id="articles"></div>
 
-            <div class="card">
-              <div class="card-header text-center">
-                <h3>What would you like to do?</h3>
-              </div>
-              <div class="card-body text-center">
-                <h4>
-                  <a class="scrape-new">Try scraping for new articles.</a>
-                </h4>
-                <h4>
-                  <a href="/savedarticles.html">Go to saved articles</a>
-                </h4>
-              </div>
-            </div>
-
-            <!--Article cards-->
-            <div class="card">
-              <div class="card-header">
-                <h3>
-                  <a class="article-link" target="_blank" rel="noopener noreferrer" href=""></a>
-                  <a class="btn btn-success save">Save Article</a>
-                </h3>
-              </div>
-            </div>
-          </div>
-
-          <!--body for saved articles-->
-          <div id="wrapper">
-            <div id="articles"></div>
-            <div id="notes"></div>
-          </div>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
           <script src="app.js"></script>
     </head>
